--- a/The Layout Editor/app/src/main/AndroidManifest.xml
+++ b/The Layout Editor/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.aditya.HelloToastChallengee">
+    package="com.aditya.theLayoutEditor">
 
     <application
         android:allowBackup="true"
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HelloToast">
-        <activity android:name="com.aditya.HelloToastChallengee.MainActivity">
+        <activity android:name="com.aditya.theLayoutEditor.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
